[package]
name = "protify_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] } # Await Future handler
hyper = { version = "1", features = ["full"] } # Http
hyper-util = { version = "0.1", features = ["full"] } # Http
http-body-util = "0.1" # Http
settimeout = "0.1.2" # Timeout
serde_json = "=1.0.114" # Json Encoder/Decoder
mysql = "24.0.0" # Database